# pocoPractice

./: CMakeLists.txt  main.cpp
poco/lib/: libPocoFoundation.so.16  libPocoNet.so.16  libPocoUtil.so.16  libPocoUtild.so.16  libPocoXML.so.16  libPocoXMLd.so.16
